--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kasper | template two</title>
-    <link rel="stylesheet" href="css/kasper.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/kasper.css">
 
     <!-- add the open sans font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- start header -->
+    <header>
+        <div class="container">
+            <a href="#">
+                <img src="images/logo.png" alt="logo">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <div class="form">
+                <i class="fas fa-search"></i>
+            </div>
+        </div>
+    </header>
+    <!-- end header -->
 </body>
 </html>
