--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <img src="images/logo.png" alt="logo">
             </a>
             <nav>
+                <i class="fas fa-bars toggle-menu"></i>
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">Services</a></li>
