add landing part: html & css

--- a/index.html
+++ b/index.html
@@ -37,5 +37,16 @@
         </div>
     </header>
     <!-- end header -->
+	<!-- start landing  -->
+	<div class="landing">
+		<div class="overlay"></div>
+			<div class="text">
+				<div class="content">
+					<h2>HELLO WORLD! <br> WE ARE KASPER, WE MAKE ART.</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa voluptatibus nemo harum fuga consectetur non, alias modi doloremque. Iste vitae ipsa, aperiam sed officiis ad sunt delectus doloribus itaque!</p>
+				</div>
+			</div>
+	</div>
+	<!-- end landing -->
 </body>
 </html>
