landing part: add some tips and make it responsive

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsa voluptatibus nemo harum fuga consectetur non, alias modi doloremque. Iste vitae ipsa, aperiam sed officiis ad sunt delectus doloribus itaque!</p>
 				</div>
 			</div>
+			<i class="fas fa-angle-left change-background fa-2x"></i>
+			<i class="fas fa-angle-right change-background fa-2x"></i>
+			<ul class="bullets">
+				<li></li>
+				<li class="active"></li>
+				<li></li>
+			</ul>
 	</div>
 	<!-- end landing -->
 </body>
