add the design part html and css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- start header -->
     <header>
         <div class="container">
-            <a href="#">
+            <a href="#" class="logo">
                 <img src="images/logo.png" alt="logo">
             </a>
             <nav>
@@ -30,10 +30,10 @@
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
+				<div class="form">
+					<i class="fas fa-search"></i>
+				</div>
             </nav>
-            <div class="form">
-                <i class="fas fa-search"></i>
-            </div>
         </div>
     </header>
     <!-- end header -->
@@ -55,5 +55,61 @@
 			</ul>
 	</div>
 	<!-- end landing -->
+	<!-- start services -->
+	 <div class="services">
+		<div class="container">
+			<div class="main-heading">
+				<h2>Services</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias quas quidem maxime expedita molestiae qui ab sunt.</p>
+			</div>
+			<div class="srv-container">
+				<div class="srv-box">
+					<i class="fas fa-desktop fa-3x"></i>
+					<div class="text">
+						<h3>Vorem amet intuitive</h3>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius tempore aperiam obcaecati, quo vitae incidunt aspernatur laboriosam? Repudiandae, doloribus alias.</p>
+					</div>
+				</div>
+				<div class="srv-box">
+					<i class="fas fa-cog fa-3x"></i>
+					<div class="text">
+						<h3>Vorem amet intuitive</h3>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius tempore aperiam obcaecati, quo vitae incidunt aspernatur laboriosam? Repudiandae, doloribus alias.</p>
+					</div>
+				</div>
+				<div class="srv-box">
+					<i class="fas fa-pencil-ruler fa-3x"></i>
+					<div class="text">
+						<h3>Vorem amet intuitive</h3>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius tempore aperiam obcaecati, quo vitae incidunt aspernatur laboriosam? Repudiandae, doloribus alias.</p>
+					</div>
+				</div>
+				<div class="srv-box">
+					<i class="fas fa-camera fa-3x"></i>
+					<div class="text">
+						<h3>Vorem amet intuitive</h3>
+						<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius tempore aperiam obcaecati, quo vitae incidunt aspernatur laboriosam? Repudiandae, doloribus alias.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	 </div>
+	<!-- end services -->
+	<!-- start design section -->
+	<div class="design">
+		<div class="image">
+			<img src="images/mobile.png" alt="mobile">
+		</div>
+		<div class="text">
+			<h2>Our Design Comes With...</h2>
+			<ul>
+				<li>Responsive Design</li>
+				<li>Modern And Clean Design</li>
+				<li>Clean Code</li>
+				<li>Browser Friendly</li>
+			</ul>
+		</div>
+	</div>
+	<!-- end design section -->
 </body>
 </html>
