add portfolio section html and css

--- a/index.html
+++ b/index.html
@@ -111,5 +111,82 @@
 		</div>
 	</div>
 	<!-- end design section -->
+	<!-- start portfolio section -->
+	<div class="portfolio">
+		<div class="container">
+			<div class="main-heading">
+				<h2>Portfolio</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias provident voluptatem obcaecati doloribus labore amet.
+				</p>
+			</div>
+			<ul class="shuffle">
+				<a href="#"><li class="active">All</li></a>
+				<a href="#"><li>App</li></a>
+				<a href="#"><li>Photo</li></a>
+				<a href="#"><li>Web</li></a>
+				<a href="#"><li>Print</li></a>
+			</ul>
+		</div>
+		<div class="portfolio-imgs-container">
+			<div class="box">
+				<img src="images/shuffle-00.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-01.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-02.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-03.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-04.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-05.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-06.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+			<div class="box">
+				<img src="images/shuffle-07.jpg" alt="portfolio-imgs">
+				<div class="caption">
+					<h4>Awesome Image</h4>
+					<p>Photography</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	 <!-- end portfolio section -->
 </body>
 </html>
