complete the portfolio part

--- a/index.html
+++ b/index.html
@@ -129,56 +129,56 @@
 			</ul>
 		</div>
 		<div class="portfolio-imgs-container">
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-00.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-01.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-02.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-03.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-04.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-05.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-06.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
 					<p>Photography</p>
 				</div>
 			</div>
-			<div class="box">
+			<div class="portfolio-box">
 				<img src="images/shuffle-07.jpg" alt="portfolio-imgs">
 				<div class="caption">
 					<h4>Awesome Image</h4>
@@ -186,6 +186,7 @@
 				</div>
 			</div>
 		</div>
+		<a href="#" class="more">More</a>
 	</div>
 	 <!-- end portfolio section -->
 </body>
