add about section: html & css

--- a/index.html
+++ b/index.html
@@ -189,5 +189,26 @@
 		<a href="#" class="more">More</a>
 	</div>
 	 <!-- end portfolio section -->
+	 <!-- start video section -->
+	<div class="video">
+		<video src="images/videos/awesome-video.mp4" autoplay muted loop></video>
+		<div class="text">
+			<h2>Super Awesome Video Here</h2>
+			<p>Its All You Need</p>
+			<button>See More</button>
+		</div>
+	</div>
+	 <!-- end video section -->
+	 <!-- start about section -->
+	<div class="about">
+		<div class="container">
+			<div class="main-heading">
+				<h2>About Us</h2>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, itaque ex soluta repellat dolore veritatis. Autem, optio quisquam.</p>
+			</div>
+			<img src="images/about.png" alt="about">
+		</div>
+	</div>
+	 <!-- end about section -->
 </body>
 </html>
