add skills section html part

--- a/index.html
+++ b/index.html
@@ -236,6 +236,65 @@
 
 		</div>
 	</div>
-	 <!-- end stats sections -->
+	 <!-- end stats section -->
+	 <!-- start skills section -->
+	<div class="skills">
+		<div class="container">
+			<div class="testimonials">
+				<h3>testimonials</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi ipsum odio illo ex doloremque alias, tempore cupiditate deleniti cumque blanditiis repellendus at, accusantium ullam iste recusandae, totam dolore a ea!</p>
+				<div class="content">
+					<img src="images/avatar-01.jpg" alt="avatar">
+					<div class="text">
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae, molestias fugiat beatae corrupti consequuntur! Doloremque libero eaque earum voluptas placeat quisquam enim facere porro. Necessitatibus accusantium nulla facilis fugit.
+						<p>John Doe, CEO</p>
+					</div>
+				</div>
+				<div class="content">
+					<img src="images/avatar-02.jpg" alt="avatar">
+					<div class="text">
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae, molestias fugiat beatae corrupti consequuntur! Doloremque libero eaque earum voluptas placeat quisquam enim facere porro. Necessitatibus accusantium nulla facilis fugit.
+						<p>John Doe, CEO</p>
+					</div>
+				</div>
+				<ul class="bullets">
+					<li></li>
+					<li class="active"></li>
+					<li></li>
+				</ul>
+			</div>
+			<div class="skill">
+				<h3>Skills</h3>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores laudantium maiores iure qui fuga fugiat ullam commodi officia nulla maxime blanditiis aliquam nemo perferendis eligendi iusto reiciendis, ipsum error minus.</p>
+				<div class="progress-holder">
+					<h4>Adobe</h4>
+					<div class="progress">
+						<span style="width: 90%" data-progress="90%"></span>
+					</div>
+				</div>
+				<div class="progress-holder">
+					<h4>html &amp; Css</h4>
+					<div class="progress">
+						<span style="width: 85%" data-progress="85%"></span>
+					</div>
+				</div>
+				<div class="progress-holder">
+					<h4>JavaScript</h4>
+					<div class="progress">
+						<span style="width: 80%" data-progress="80%"></span>
+					</div>
+				</div>
+				<div class="progress-holder">
+					<h4>Python</h4>
+					<div class="progress">
+						<span style="width: 90%" data-progress="90%"></span>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	 <!-- end skills section -->
+
 </body>
 </html>
