--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 					</div>
 				</div>
 				<div class="progress-holder">
-					<h4>Python</h4>
+					<h4>Pythont</h4>
 					<div class="progress">
 						<span style="width: 90%" data-progress="90%"></span>
 					</div>
