--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
 				<div class="content">
 					<img src="images/avatar-01.jpg" alt="avatar">
 					<div class="text">
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae, molestias fugiat beatae corrupti consequuntur! Doloremque libero eaque earum voluptas placeat quisquam enim facere porro. Necessitatibus accusantium nulla facilis fugit.
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae, molestias fugiat beatae corrupti consequuntur.
 						<p>John Doe, CEO</p>
 					</div>
 				</div>
 				<div class="content">
 					<img src="images/avatar-02.jpg" alt="avatar">
 					<div class="text">
-						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae, molestias fugiat beatae corrupti consequuntur! Doloremque libero eaque earum voluptas placeat quisquam enim facere porro. Necessitatibus accusantium nulla facilis fugit.
+						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor repudiandae, molestias fugiat beatae corrupti consequuntur! Doloremque.
 						<p>John Doe, CEO</p>
 					</div>
 				</div>
@@ -267,7 +267,7 @@
 				<h3>Skills</h3>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores laudantium maiores iure qui fuga fugiat ullam commodi officia nulla maxime blanditiis aliquam nemo perferendis eligendi iusto reiciendis, ipsum error minus.</p>
 				<div class="progress-holder">
-					<h4>Adobe</h4>
+					<h4>.Net</h4>
 					<div class="progress">
 						<span style="width: 90%" data-progress="90%"></span>
 					</div>
@@ -285,7 +285,7 @@
 					</div>
 				</div>
 				<div class="progress-holder">
-					<h4>Pythont</h4>
+					<h4>Python</h4>
 					<div class="progress">
 						<span style="width: 90%" data-progress="90%"></span>
 					</div>
