add quote section: Html & Css parts

--- a/index.html
+++ b/index.html
@@ -295,6 +295,15 @@
 		</div>
 	</div>
 	 <!-- end skills section -->
-
+	 <!-- start quote section -->
+	<div class="quote">
+		<div class="container">
+			<i class="fa-solid fa-quote-left"></i>
+			<span>Design is not just what it looks like and feels like. Design is how it works.</span>
+			<i class="fa-solid fa-quote-right"></i>
+			<p>Steve Jobs</p>
+		</div>
+	</div>
+	 <!-- end quote section -->
 </body>
 </html>
