--- a/index.html
+++ b/index.html
@@ -305,5 +305,82 @@
 		</div>
 	</div>
 	 <!-- end quote section -->
+	 <!-- start pricing section -->
+	<div class="pricing">
+		<div class="container">
+			<div class="main-heading">
+				<h2>Pricing</h2>
+				<p>
+					Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis aut temporibus quia aliquid vero inventore officiis eveniet saepe praesentium! Consequatur quae maiores qui nihil voluptatibus repudiandae dolore autem sunt temporibus?
+				</p>
+			</div>
+			<div class="boxes">
+				<div class="box">
+					<div class="head">
+						<h3>Basic</h3>
+						<span>19</span>
+					</div>
+					<ul>
+						<li>Feature No 1</li>
+						<li>Extra Feature</li>
+						<li>Extra Feature No 2</li>
+						<li>Feature</li>
+					</ul>
+					<div class="foot">
+						<a href="#">Buy Now</a>
+					</div>
+				</div>
+				<div class="box">
+					<div class="head">
+						<h3>Premium</h3>
+						<span>29</span>
+					</div>
+					<ul>
+						<li>Feature No 1</li>
+						<li>Extra Feature</li>
+						<li>Extra Feature No 2</li>
+						<li>Feature</li>
+					</ul>
+					<div class="foot">
+						<a href="#">Buy Now</a>
+					</div>
+				</div>
+				<div class="box">
+					<div class="head">
+						<h3>Pro</h3>
+						<span>39</span>
+					</div>
+					<ul>
+						<li>Feature No 1</li>
+						<li>Extra Feature</li>
+						<li>Extra Feature No 2</li>
+						<li>Feature</li>
+					</ul>
+					<div class="foot">
+						<a href="#">Buy Now</a>
+					</div>
+				</div>
+				<div class="box">
+					<div class="head">
+						<h3>Platinum</h3>
+						<span>49</span>
+					</div>
+					<ul>
+						<li>Feature No 1</li>
+						<li>Extra Feature</li>
+						<li>Extra Feature No 2</li>
+						<li>Feature</li>
+					</ul>
+					<div class="foot">
+						<a href="#">Buy Now</a>
+					</div>
+				</div>
+			</div>
+			<p class="contact-us">Contact us if you have special request</p>
+			<a href="#" class="contact-link">Contact Us</a>
+		</div>
+	</div>
+	 <!-- end pricing section -->
+
 </body>
 </html>
