finish subscribe section: html part

--- a/index.html
+++ b/index.html
@@ -381,6 +381,19 @@
 		</div>
 	</div>
 	 <!-- end pricing section -->
-
+	 <!-- start subscribe section -->
+	<div class="subscribe">
+		<div class="container">
+			<form action="">
+				<i class="far fa-envelope fa-lg"></i>
+				<input type="email" name="mail">
+				<input type="submit" value="Subscribe">
+			</form>
+			<p>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita deleniti exercitationem repellendus vel nulla adipisci eum quia excepturi debitis minus nisi pariatur laudantium totam, tempore, optio a, vero eos. Minima!
+			</p>
+		</div>
+	</div>
+	 <!-- end subscribe section -->
 </body>
 </html>
