--- a/index.html
+++ b/index.html
@@ -386,11 +386,11 @@
 		<div class="container">
 			<form action="">
 				<i class="far fa-envelope fa-lg"></i>
-				<input type="email" name="mail">
+				<input type="email" name="mail" placeholder="Your Email">
 				<input type="submit" value="Subscribe">
 			</form>
 			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita deleniti exercitationem repellendus vel nulla adipisci eum quia excepturi debitis minus nisi pariatur laudantium totam, tempore, optio a, vero eos. Minima!
+				Stay in the loop and get the latest insights, tips, and updates directly to your inbox. Subscribe now and never miss a thing!
 			</p>
 		</div>
 	</div>
