finish contact-us: html part

--- a/index.html
+++ b/index.html
@@ -395,5 +395,37 @@
 		</div>
 	</div>
 	 <!-- end subscribe section -->
+	 <!-- start contact-us section -->
+	<div class="contact">
+		<div class="container">
+			<div class="main-heading">
+				<h2>Contact Us</h2>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aperiam aut quis aspernatur recusandae. Numquam blanditiis culpa nesciunt soluta quaerat error deleniti, cum, dolorum at exercitationem accusamus qui magni perspiciatis.
+				</p>
+			</div>
+			<div class="contact-content">
+				<form action="">
+					<input type="text" name="name" placeholder="Your Name" class="main-input">
+					<input type="email" name="mail" placeholder="Your Email" class="main-input">
+					<textarea name="message" placeholder="Your Message" class="main-input"></textarea>
+					<input type="submit" value="Send Message">
+				</form>
+				<div class="contact-info">
+					<h4>Get In Touch</h4>
+					<span class="phone">+00 123.456.789</span>
+					<span class="phone">+00 123.456.789</span>
+					<h4>Where We Are</h4>
+					<address>
+						Awesome Address 17 <br>
+						New York, NYC <br>
+						123-4560-789 <br>
+						USA
+					</address>
+				</div>
+			</div> 
+		</div>
+	</div>
+	 <!-- end contact-us section -->
 </body>
 </html>
