footer section: - finish html part

--- a/index.html
+++ b/index.html
@@ -427,5 +427,19 @@
 		</div>
 	</div>
 	 <!-- end contact-us section -->
+	 <!-- start footer section -->
+	<div class="footer">
+		<div class="container">
+			<img src="images/logo.png" alt="logo">
+			<div class="social-icons">
+				<i class="fab fa-facebook-f"></i>
+				<i class="fab fa-twitter"></i>
+				<i class="fab fa-home"></i>
+				<i class="fab fa-linkedin"></i>
+			</div>
+			<p class="copyright">&copy; 2025 <span>Kasper</span> All Rights Reserved</p>
+		</div>
+	</div>
+	 <!-- end footer section -->
 </body>
 </html>
