--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- start header -->
+    <!-- start header section-->
     <header>
         <div class="container">
             <a href="#" class="logo">
@@ -24,11 +24,11 @@
                 <i class="fas fa-bars toggle-menu"></i>
                 <ul>
                     <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Pricing</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
 				<div class="form">
 					<i class="fas fa-search"></i>
@@ -36,7 +36,7 @@
             </nav>
         </div>
     </header>
-    <!-- end header -->
+    <!-- end header section-->
 	<!-- start landing  -->
 	<div class="landing">
 		<div class="overlay"></div>
@@ -54,9 +54,9 @@
 				<li></li>
 			</ul>
 	</div>
-	<!-- end landing -->
+	<!-- end landing section-->
 	<!-- start services -->
-	 <div class="services">
+	 <div class="services" id ="services">
 		<div class="container">
 			<div class="main-heading">
 				<h2>Services</h2>
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 	 </div>
-	<!-- end services -->
+	<!-- end services section-->
 	<!-- start design section -->
 	<div class="design">
 		<div class="image">
@@ -112,7 +112,7 @@
 	</div>
 	<!-- end design section -->
 	<!-- start portfolio section -->
-	<div class="portfolio">
+	<div class="portfolio" id="portfolio">
 		<div class="container">
 			<div class="main-heading">
 				<h2>Portfolio</h2>
@@ -200,7 +200,7 @@
 	</div>
 	 <!-- end video section -->
 	 <!-- start about section -->
-	<div class="about">
+	<div class="about" id="about">
 		<div class="container">
 			<div class="main-heading">
 				<h2>About Us</h2>
@@ -306,7 +306,7 @@
 	</div>
 	 <!-- end quote section -->
 	 <!-- start pricing section -->
-	<div class="pricing">
+	<div class="pricing" id="pricing">
 		<div class="container">
 			<div class="main-heading">
 				<h2>Pricing</h2>
@@ -396,7 +396,7 @@
 	</div>
 	 <!-- end subscribe section -->
 	 <!-- start contact-us section -->
-	<div class="contact">
+	<div class="contact" id="contact">
 		<div class="container">
 			<div class="main-heading">
 				<h2>Contact Us</h2>
@@ -431,13 +431,14 @@
 	<div class="footer">
 		<div class="container">
 			<img src="images/logo.png" alt="logo">
+			<p>We Are Social</p>
 			<div class="social-icons">
 				<i class="fab fa-facebook-f"></i>
 				<i class="fab fa-twitter"></i>
 				<i class="fab fa-home"></i>
 				<i class="fab fa-linkedin"></i>
 			</div>
-			<p class="copyright">&copy; 2025 <span>Kasper</span> All Rights Reserved</p>
+			<p class="copyright"><span>&copy;</span> 2025 <span>Kasper</span> All Rights Reserved</p>
 		</div>
 	</div>
 	 <!-- end footer section -->
